--- a/PDFimg/App.xaml
+++ b/PDFimg/App.xaml
@@ -1,7 +1,6 @@
 ﻿<Application x:Class="PDFimg.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:PDFimg"
              StartupUri="Views/MainWindowView.xaml">
     <Application.Resources>
         <ResourceDictionary>
@@ -11,6 +10,18 @@
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Primary/MaterialDesignColor.DeepOrange.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Accent/MaterialDesignColor.Lime.xaml" />
             </ResourceDictionary.MergedDictionaries>
+
+            <Style x:Key="AppButton" BasedOn="{StaticResource MaterialDesignFlatDarkBgButton}" TargetType="{x:Type Button}">
+                <Setter Property="Background" Value="#FFAB91" />
+                <Setter Property="BorderBrush" Value="{x:Null}" />
+                <Setter Property="Cursor" Value="Arrow" />
+                <Style.Triggers>
+                    <Trigger Property="IsMouseOver" Value="True">
+                        <Setter Property="Background" Value="#D8FFAB91" />
+                        <Setter Property="BorderBrush" Value="{x:Null}" />
+                    </Trigger>
+                </Style.Triggers>
+            </Style>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
