--- a/PDFimg/App.xaml
+++ b/PDFimg/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="PDFimg.App"
+﻿<prism:PrismApplication x:Class="PDFimg.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Views/MainWindowView.xaml">
+             xmlns:prism="http://prismlibrary.com/">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -52,4 +52,4 @@
             </Style>
         </ResourceDictionary>
     </Application.Resources>
-</Application>
+</prism:PrismApplication>
