--- a/PDFimg/Views/PdfImgView.xaml
+++ b/PDFimg/Views/PdfImgView.xaml
@@ -7,61 +7,76 @@
              xmlns:prism="http://prismlibrary.com/"
              mc:Ignorable="d"
              prism:ViewModelLocator.AutoWireViewModel="True">
-    <StackPanel Margin="20">
-        <StackPanel Orientation="Horizontal">
-            <Button Style="{DynamicResource AppButton}" Command="{Binding Path=FolderBrowserDialog}">
+    <Grid Margin="20">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <Button Style="{DynamicResource AppButton}" Command="{Binding Path=FolderBrowserDialog}">
+                    <StackPanel Orientation="Horizontal">
+                        <materialDesign:PackIcon Kind="Folder" VerticalAlignment="Center" Height="20" Width="20" />
+                        <TextBlock Margin="5 0 0 0" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="Select folder" />
+                    </StackPanel>
+                </Button>
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="10 0 0 0" FontSize="14" ToolTip="{Binding Path=PathToFolderFull}" Text="{Binding Path=PathToFolderShort}" />
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" Margin="0 5 0 0">
+                <TextBlock VerticalAlignment="Center" Margin="1 0 0 0" FontSize="14" Text="Count of PDF files:" />
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="10 0 0 0" FontSize="14" Text="{Binding Path=CountFiles}" />
+            </StackPanel>
+
+            <DataGrid ItemsSource="{Binding DataPage}" MaxHeight="200" Margin="0 25 0 0" AutoGenerateColumns="False" CanUserAddRows="False" CanUserSortColumns="False" CanUserReorderColumns="False" IsReadOnly="True" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Hidden" ColumnHeaderStyle="{DynamicResource AppDataGridColumnHeader}" RowStyle="{DynamicResource AppDataGridRow}" CellStyle="{DynamicResource AppDataGridCell}">
+                <DataGrid.Columns>
+                    <DataGridTemplateColumn Header="Name:" Width="245">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock VerticalAlignment="Center" Text="{Binding Path=Name}" />
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                    <DataGridTemplateColumn>
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button Style="{DynamicResource AppButton}" Command="{Binding Path=DataContext.EditDataPageCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}}" CommandParameter="{Binding}">
+                                    <StackPanel Orientation="Horizontal">
+                                        <materialDesign:PackIcon Kind="FileEdit" VerticalAlignment="Center" Height="20" Width="20" />
+                                        <TextBlock Margin="5 0 0 0" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="Edit" />
+                                    </StackPanel>
+                                </Button>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                    <DataGridTemplateColumn>
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button Style="{DynamicResource AppButton}" Command="{Binding Path=DataContext.RemoveDataPageCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}}" CommandParameter="{Binding}">
+                                    <StackPanel Orientation="Horizontal">
+                                        <materialDesign:PackIcon Kind="FileDocumentRemove" VerticalAlignment="Center" Height="20" Width="20" />
+                                        <TextBlock Margin="5 0 0 0" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="Remove" />
+                                    </StackPanel>
+                                </Button>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                </DataGrid.Columns>
+            </DataGrid>
+
+            <StackPanel HorizontalAlignment="Right">
+                <Button Width="35" Height="35" Margin="0 -5 10 0" Padding="0" Background="#0069C0" BorderBrush="{x:Null}" Foreground="#FAFAFA" Cursor="Arrow" Style="{StaticResource MaterialDesignIconButton}" Command="{Binding Path=AddDataPageDialogCommand}">
+                    <materialDesign:PackIcon Kind="Plus" Width="25" Height="25" />
+                </Button>
+            </StackPanel>
+        </StackPanel>
+
+        <StackPanel Grid.Row="1">
+            <Button Style="{DynamicResource AppButton}" Background="#61b660"  Command="{Binding Path=AddImagesToPdf}">
                 <StackPanel Orientation="Horizontal">
-                    <materialDesign:PackIcon Kind="Folder" VerticalAlignment="Center" Height="20" Width="20" />
-                    <TextBlock Margin="5 0 0 0" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="Select folder" />
+                    <materialDesign:PackIcon Kind="CogPlay" VerticalAlignment="Center" Height="20" Width="20" />
+                    <TextBlock Margin="5 0 0 0" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="Execute tasks" />
                 </StackPanel>
             </Button>
-            <TextBlock VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="10 0 0 0" FontSize="14" ToolTip="{Binding Path=PathToFolderFull}" Text="{Binding Path=PathToFolderShort}" />
         </StackPanel>
-        <StackPanel Orientation="Horizontal" Margin="0 5 0 0">
-            <TextBlock VerticalAlignment="Center" Margin="1 0 0 0" FontSize="14" Text="Count of PDF files:" />
-            <TextBlock VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="10 0 0 0" FontSize="14" Text="{Binding Path=CountFiles}" />
-        </StackPanel>
-
-        <DataGrid ItemsSource="{Binding DataPage}" MaxHeight="200" Margin="0 25 0 0" AutoGenerateColumns="False" CanUserAddRows="False" CanUserSortColumns="False" CanUserReorderColumns="False" IsReadOnly="True" VerticalScrollBarVisibility="Visible" ColumnHeaderStyle="{DynamicResource AppDataGridColumnHeader}" RowStyle="{DynamicResource AppDataGridRow}" CellStyle="{DynamicResource AppDataGridCell}">
-            <DataGrid.Columns>
-                <DataGridTemplateColumn Header="Name:" Width="260">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <TextBlock VerticalAlignment="Center" Text="{Binding Path=Name}" />
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
-                <DataGridTemplateColumn>
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <Button Style="{DynamicResource AppButton}" Command="{Binding Path=DataContext.EditDataPageCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}}" CommandParameter="{Binding}">
-                                <StackPanel Orientation="Horizontal">
-                                    <materialDesign:PackIcon Kind="FileEdit" VerticalAlignment="Center" Height="20" Width="20" />
-                                    <TextBlock Margin="5 0 0 0" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="Edit" />
-                                </StackPanel>
-                            </Button>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
-                <DataGridTemplateColumn>
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <Button Style="{DynamicResource AppButton}" Command="{Binding Path=DataContext.RemoveDataPageCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}}" CommandParameter="{Binding}">
-                                <StackPanel Orientation="Horizontal">
-                                    <materialDesign:PackIcon Kind="FileDocumentRemove" VerticalAlignment="Center" Height="20" Width="20" />
-                                    <TextBlock Margin="5 0 0 0" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="Remove" />
-                                </StackPanel>
-                            </Button>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
-            </DataGrid.Columns>
-        </DataGrid>
-
-        <StackPanel HorizontalAlignment="Right">
-            <Button Width="35" Height="35" Margin="0 -5 10 0" Padding="0" Background="#0069C0" BorderBrush="{x:Null}" Foreground="#FAFAFA" Cursor="Arrow" Style="{StaticResource MaterialDesignIconButton}" Command="{Binding Path=AddDataPageDialogCommand}">
-                <materialDesign:PackIcon Kind="Plus" Width="25" Height="25" />
-            </Button>
-        </StackPanel>
-    </StackPanel>
+    </Grid>
 </UserControl>
