Refactoring Views, ViewModels and Models.

--- a/PDFimg/Views/PdfImgView.xaml
+++ b/PDFimg/Views/PdfImgView.xaml
@@ -20,58 +20,60 @@
                         <TextBlock Margin="5 0 0 0" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="Select folder" />
                     </StackPanel>
                 </Button>
-                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="10 0 0 0" FontSize="14" ToolTip="{Binding Path=PdfFiles.PathToFolder}" Text="{Binding Path=PathToFolder}" />
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="10 0 0 0" FontSize="14" ToolTip="{Binding Path=PdfData.PathToFolder}" Text="{Binding Path=PathToFolder}" />
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0 5 0 0">
                 <TextBlock VerticalAlignment="Center" Margin="1 0 0 0" FontSize="14" Text="Count of PDF files:" />
-                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="10 0 0 0" FontSize="14" Text="{Binding Path=PdfFiles.CountFiles}" />
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="10 0 0 0" FontSize="14" Text="{Binding Path=PdfData.CountFiles}" />
             </StackPanel>
 
-            <DataGrid ItemsSource="{Binding DataPage}" MaxHeight="200" Margin="0 25 0 0" AutoGenerateColumns="False" CanUserAddRows="False" CanUserSortColumns="False" CanUserReorderColumns="False" IsReadOnly="True" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Hidden" ColumnHeaderStyle="{DynamicResource AppDataGridColumnHeader}" RowStyle="{DynamicResource AppDataGridRow}" CellStyle="{DynamicResource AppDataGridCell}">
-                <DataGrid.Columns>
-                    <DataGridTemplateColumn Header="Name:" Width="245">
-                        <DataGridTemplateColumn.CellTemplate>
-                            <DataTemplate>
-                                <TextBlock VerticalAlignment="Center" Text="{Binding Path=Name}" />
-                            </DataTemplate>
-                        </DataGridTemplateColumn.CellTemplate>
-                    </DataGridTemplateColumn>
-                    <DataGridTemplateColumn>
-                        <DataGridTemplateColumn.CellTemplate>
-                            <DataTemplate>
-                                <Button Style="{DynamicResource AppButton}" Command="{Binding Path=DataContext.EditDataPageCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}}" CommandParameter="{Binding}">
-                                    <StackPanel Orientation="Horizontal">
-                                        <materialDesign:PackIcon Kind="FileEdit" VerticalAlignment="Center" Height="20" Width="20" />
-                                        <TextBlock Margin="5 0 0 0" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="Edit" />
-                                    </StackPanel>
-                                </Button>
-                            </DataTemplate>
-                        </DataGridTemplateColumn.CellTemplate>
-                    </DataGridTemplateColumn>
-                    <DataGridTemplateColumn>
-                        <DataGridTemplateColumn.CellTemplate>
-                            <DataTemplate>
-                                <Button Style="{DynamicResource AppButton}" Command="{Binding Path=DataContext.RemoveDataPageCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}}" CommandParameter="{Binding}">
-                                    <StackPanel Orientation="Horizontal">
-                                        <materialDesign:PackIcon Kind="FileDocumentRemove" VerticalAlignment="Center" Height="20" Width="20" />
-                                        <TextBlock Margin="5 0 0 0" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="Remove" />
-                                    </StackPanel>
-                                </Button>
-                            </DataTemplate>
-                        </DataGridTemplateColumn.CellTemplate>
-                    </DataGridTemplateColumn>
-                </DataGrid.Columns>
-            </DataGrid>
+            <Border Margin="0 25 0 0" Height="200" BorderThickness="3" BorderBrush="#2E2E2E" CornerRadius="4">
+                <DataGrid ItemsSource="{Binding PdfData.ImgData}" Margin="4" AutoGenerateColumns="False" CanUserAddRows="False" CanUserSortColumns="False" CanUserReorderColumns="False" CanUserResizeColumns="False" IsReadOnly="True" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Hidden" ColumnHeaderStyle="{DynamicResource AppDataGridColumnHeader}" RowStyle="{DynamicResource AppDataGridRow}" CellStyle="{DynamicResource AppDataGridCell}">
+                    <DataGrid.Columns>
+                        <DataGridTemplateColumn Header="Name:" Width="245">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <TextBlock VerticalAlignment="Center" Text="{Binding Path=Name}" />
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+                        <DataGridTemplateColumn>
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <Button Style="{DynamicResource AppButton}" Command="{Binding Path=DataContext.EditImgDataCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}}" CommandParameter="{Binding}">
+                                        <StackPanel Orientation="Horizontal">
+                                            <materialDesign:PackIcon Kind="FileEdit" VerticalAlignment="Center" Height="20" Width="20" />
+                                            <TextBlock Margin="5 0 0 0" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="Edit" />
+                                        </StackPanel>
+                                    </Button>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+                        <DataGridTemplateColumn>
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <Button Style="{DynamicResource AppButton}" Command="{Binding Path=DataContext.RemoveImgDataCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}}" CommandParameter="{Binding}">
+                                        <StackPanel Orientation="Horizontal">
+                                            <materialDesign:PackIcon Kind="FileDocumentRemove" VerticalAlignment="Center" Height="20" Width="20" />
+                                            <TextBlock Margin="5 0 0 0" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="Remove" />
+                                        </StackPanel>
+                                    </Button>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+                    </DataGrid.Columns>
+                </DataGrid>
+            </Border>
 
             <StackPanel HorizontalAlignment="Right">
-                <Button Width="35" Height="35" Margin="0 -5 10 0" Padding="0" Background="#0069C0" BorderBrush="{x:Null}" Foreground="#FAFAFA" Cursor="Arrow" Style="{StaticResource MaterialDesignIconButton}" Command="{Binding Path=AddDataPageDialogCommand}">
+                <Button Width="35" Height="35" Margin="0 -5 10 0" Padding="0" Background="#0069C0" BorderBrush="{x:Null}" Foreground="#FAFAFA" Cursor="Arrow" Style="{StaticResource MaterialDesignIconButton}" Command="{Binding Path=AddImgDataDialogCommand}">
                     <materialDesign:PackIcon Kind="Plus" Width="25" Height="25" />
                 </Button>
             </StackPanel>
         </StackPanel>
 
         <StackPanel Grid.Row="1">
-            <Button Style="{DynamicResource AppButton}" Background="#61b660"  Command="{Binding Path=AddImagesToPdf}">
+            <Button Style="{DynamicResource AppButton}" Background="#FF5722"  Command="{Binding Path=AddImagesToPdf}">
                 <StackPanel Orientation="Horizontal">
                     <materialDesign:PackIcon Kind="CogPlay" VerticalAlignment="Center" Height="20" Width="20" />
                     <TextBlock Margin="5 0 0 0" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="Execute tasks" />
