--- a/PDFimg/Views/Dialogs/ImgDataView.xaml
+++ b/PDFimg/Views/Dialogs/ImgDataView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PDFimg.Views.Dialogs.DataPageView"
+﻿<UserControl x:Class="PDFimg.Views.Dialogs.ImgDataView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -21,7 +21,7 @@
     <StackPanel Margin="10 15 10 15">
         <StackPanel>
             <TextBlock Margin="5 0 0 0" FontSize="14" Text="Name:" />
-            <TextBox Padding="4" MaxLength="50" FontSize="14" materialDesign:TextFieldAssist.DecorationVisibility="Hidden" Text="{Binding Path=DataPage.Name, UpdateSourceTrigger=PropertyChanged}" />
+            <TextBox Padding="4" MaxLength="50" FontSize="14" materialDesign:TextFieldAssist.DecorationVisibility="Hidden" Text="{Binding Path=ImgData.Name, UpdateSourceTrigger=PropertyChanged}" />
         </StackPanel>
 
         <StackPanel Orientation="Horizontal" Margin="0 25 0 0">
@@ -31,23 +31,23 @@
                     <TextBlock Margin="5 0 0 0" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="Select image" />
                 </StackPanel>
             </Button>
-            <TextBlock VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="10 0 0 0" FontSize="14" ToolTip="{Binding Path=DataPage.PathToImage}" Text="{Binding Path=PathToImage}" />
+            <TextBlock VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="10 0 0 0" FontSize="14" ToolTip="{Binding Path=ImgData.PathToImage}" Text="{Binding Path=PathToImage}" />
         </StackPanel>
 
         <StackPanel Orientation="Horizontal" Margin="0 15 0 0">
             <TextBlock VerticalAlignment="Center" Margin="5 0 0 0" FontSize="14" Text="Pages:" />
-            <TextBox Margin="5 0 0 0" Padding="4" VerticalAlignment="Center" HorizontalAlignment="Stretch" Width="249" FontSize="14" materialDesign:TextFieldAssist.DecorationVisibility="Hidden" Text="{Binding Path=DataPage.PageNumbers, UpdateSourceTrigger=PropertyChanged}" />
+            <TextBox Margin="5 0 0 0" Padding="4" VerticalAlignment="Center" HorizontalAlignment="Stretch" Width="249" FontSize="14" materialDesign:TextFieldAssist.DecorationVisibility="Hidden" Text="{Binding Path=ImgData.PageNumbers, UpdateSourceTrigger=PropertyChanged}" />
         </StackPanel>
 
         <StackPanel Orientation="Horizontal" Margin="0 15 0 0">
             <TextBlock VerticalAlignment="Center" Margin="5 0 0 0" FontSize="14" Text="Position X:" />
-            <TextBox Margin="5 0 0 0" Padding="4" VerticalAlignment="Center" HorizontalAlignment="Stretch" Width="75" FontSize="14" materialDesign:TextFieldAssist.DecorationVisibility="Hidden" Text="{Binding Path=DataPage.PositionX, UpdateSourceTrigger=PropertyChanged}" />
+            <TextBox Margin="5 0 0 0" Padding="4" VerticalAlignment="Center" HorizontalAlignment="Stretch" Width="75" FontSize="14" materialDesign:TextFieldAssist.DecorationVisibility="Hidden" Text="{Binding Path=ImgData.PositionX, UpdateSourceTrigger=PropertyChanged}" />
             <TextBlock VerticalAlignment="Center" Margin="5 0 0 0" FontSize="14" Text="Position Y:" />
-            <TextBox Margin="5 0 0 0" Padding="4" VerticalAlignment="Center" HorizontalAlignment="Stretch" Width="75" FontSize="14" materialDesign:TextFieldAssist.DecorationVisibility="Hidden" Text="{Binding Path=DataPage.PositionY, UpdateSourceTrigger=PropertyChanged}" />
+            <TextBox Margin="5 0 0 0" Padding="4" VerticalAlignment="Center" HorizontalAlignment="Stretch" Width="75" FontSize="14" materialDesign:TextFieldAssist.DecorationVisibility="Hidden" Text="{Binding Path=ImgData.PositionY, UpdateSourceTrigger=PropertyChanged}" />
         </StackPanel>
 
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 25 0 0" >
-            <Button Style="{DynamicResource AppButton}" IsDefault="True" Command="{Binding Path=SaveDataPage}">
+            <Button Style="{DynamicResource AppButton}" IsDefault="True" Command="{Binding Path=SaveImageData}">
                 <StackPanel Orientation="Horizontal">
                     <materialDesign:PackIcon Kind="Check" VerticalAlignment="Center" Height="20" Width="20" />
                     <TextBlock Margin="5 0 0 0" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="Save" />
