--- a/PDFimg/Views/Dialogs/ImgDataView.xaml
+++ b/PDFimg/Views/Dialogs/ImgDataView.xaml
@@ -25,7 +25,7 @@
         </StackPanel>
 
         <StackPanel Orientation="Horizontal" Margin="0 25 0 0">
-            <Button Style="{DynamicResource AppButton}" Command="{Binding Path=FileBrowserDialog}">
+            <Button Style="{DynamicResource AppButton}" Command="{Binding Path=FileBrowserDialogCommand}">
                 <StackPanel Orientation="Horizontal">
                     <materialDesign:PackIcon Kind="FileImage" VerticalAlignment="Center" Height="20" Width="20" />
                     <TextBlock Margin="5 0 0 0" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="Select image" />
@@ -47,7 +47,7 @@
         </StackPanel>
 
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 25 0 0" >
-            <Button Style="{DynamicResource AppButton}" IsDefault="True" Command="{Binding Path=SaveImageData}">
+            <Button Style="{DynamicResource AppButton}" IsDefault="True" Command="{Binding Path=SaveImageDataCommand}">
                 <StackPanel Orientation="Horizontal">
                     <materialDesign:PackIcon Kind="Check" VerticalAlignment="Center" Height="20" Width="20" />
                     <TextBlock Margin="5 0 0 0" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="Save" />
